@startuml DDD_Tactical

title DDD — Tactical Design Patterns

' Color Palette Definitions
skinparam rectangle {
    BorderColor #000000
    BorderThickness 3
    RoundCorner 8
}
skinparam arrow {
    Color #000000
    Thickness 2
}
skinparam defaultIconSize 16

' Blue - Entities/Domain Objects
skinparam class<<Blue>> {
    BackgroundColor #2B579A
    FontColor #FFFFFF
}

' Green - Infrastructure/Adapters
skinparam class<<Green>> {
    BackgroundColor #66B032
    FontColor #000000
}

' Red - External/Boundary
skinparam class<<Red>> {
    BackgroundColor #B22222
    FontColor #FFFFFF
}

' Tan - Neutral/Shared
skinparam class<<Tan>> {
    BackgroundColor #F5EBDC
    FontColor #000000
}

class AggregateRoot <<Blue>> {
  + UUID id
  + List<DomainEvent> events
  + void apply(DomainEvent)
  + void commit()
}

class Order <<Blue>> {
  - List<OrderItem> items
  - OrderStatus status
  - Money totalPrice
  + void addItem(ProductId, Quantity)
  + void confirm()
  + void ship()
}

class OrderItem <<Blue>> {
  + ProductId productId
  + Quantity quantity
  + Money price
}

class Money <<Blue>> {
  + BigDecimal amount
  + Currency currency
}

class OrderRepository <<Green>> {
  + Order findById(OrderId)
  + void save(Order)
  + List<Order> findUnconfirmed()
}

class OrderConfirmed <<Tan>> {
  + OrderId orderId
  + Instant occurredOn
}

class DomainEvent <<Blue>> {
  + abstract Instant occurredOn()
}

class Entity <<Blue>> {
  + UUID id
}

class ValueObject <<Blue>> {
  + boolean equals(Object)
  + int hashCode()
}

Order --|> AggregateRoot
OrderItem --|> Entity
Order "1" *-- "many" OrderItem : contains
OrderItem "many" --> "1" Money : references
Money --|> ValueObject
OrderConfirmed --|> DomainEvent
OrderConfirmed "many" <-- "1" Order : raises
OrderRepository .. Order : manages

note right of Order
  **AggregateRoot Rules:**
  1. External refs only via ID
  2. Child entities cannot be
     accessed from outside
  3. Invariant checks on mutations
end note

note right of ValueObject
  **Value Object Rules:**
  1. Immutable
  2. Identity-free
  3. Content equality
end note

legend top
  | Color | Category |
  | #2B579A | AggregateRoot, Order, Entities (Blue) |
  | #66B032 | Repository (Green) |
  | #F5EBDC | DomainEvent (Tan) |
endlegend

@enduml
